fixed alignment issues

--- a/public/stylesheets/comsat.css
+++ b/public/stylesheets/comsat.css
@@ -54,10 +54,10 @@ svg{
 		margin-top: 100px;
 	}
 	#playerOne .race{
-		margin-right: 200px;
+		left: 50px;
 	}
 	#playerTwo .race{
-		margin-right: 200px;
+		right: 50px;
 	}
 	.nameSlider{
 		font-weight: bold;
@@ -75,11 +75,13 @@ svg{
 	#playerOne .nameSlider{	
 		left: 0px;
 		background: -webkit-linear-gradient(225deg, transparent 70px, rgba(0,0,0,0.5) 50px);
+		background: -moz-linear-gradient(225deg, transparent 70px, rgba(0,0,0,0.5) 50px);
 	    background-position: bottom left, bottom right, top right, top left;
 	}
 	#playerTwo .nameSlider{
 		right: 0px;
 		background: -webkit-linear-gradient(315deg, transparent 70px, rgba(0,0,0,0.5) 50px);
+		background: -moz-linear-gradient(315deg, transparent 70px, rgba(0,0,0,0.5) 50px);
 	    background-position: bottom left, bottom right, top right, top left;
 	}
 	
